unpackaged/main/default/objects/litify__lp_Plan_Template_List__c/litify__lp_Plan_Template_List__c.object-meta.xml
<CustomObject>
    <label>Plan Template List</label>
    <nameField>
        <label>Plan Template List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Template Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>