unpackaged/main/default/objects/litify__lp_Plan_Template_List__c/fields/litify__lp_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Auto_Number__c</fullName>
    <displayFormat>PTL-{0000}</displayFormat>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>