unpackaged/main/default/objects/litify__lp_Plan_Template_List__c/fields/litify__lp_List_Template__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_List_Template__c</fullName>
    <label>List Template</label>
    <referenceTo>litify__lp_List__c</referenceTo>
    <relationshipLabel>Plan Templates</relationshipLabel>
    <relationshipName>lp_Plan_Templates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>