unpackaged/main/default/objects/litify__lp_Plan_Template_List__c/fields/litify__lp_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Plan_Template__c</fullName>
    <label>Plan Template</label>
    <referenceTo>litify__lp_Plan__c</referenceTo>
    <relationshipLabel>List Templates</relationshipLabel>
    <relationshipName>lp_List_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>